syntax = "proto3";
package protos.event.connectors.assets;

import "google/protobuf/wrappers.proto";
import "protos/event/base.proto";
import "protos/event/connectors.proto";

message OpenSearchIndexAssetModel {
  google.protobuf.StringValue index = 1;
}

message OpenSearchIndexAssetOptions {
  repeated string indexes = 1;
}

message OpenSearchAssetModel {
  google.protobuf.UInt64Value id = 1;
  ConnectorType connector_type = 2;
  ConnectorMetadataModelType type = 3;
  sfixed64 last_updated = 4;
  oneof asset {
    OpenSearchIndexAssetModel open_search_index = 5;
  }
}

message OpenSearchAssets {
  repeated OpenSearchAssetModel assets = 1;
}